# GraphX-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Factory.hpp  I2DRenderer.hpp
sample/: CMakeLists.txt
sample/src/: main.cpp
sample/src/shaders/: color.wgsl
src/: 2DRenderer.cpp  2DRenderer.hpp  Factory.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Shader.cpp  Shader.hpp  Uniform.cpp  Uniform.hpp  appleExt.hpp  appleExt.m
